// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CustomCheckbox renders checked 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        [
          {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          undefined,
          {
            "tintColor": "#1EC490",
          },
        ]
      }
    />
    <Image
      animatedStyle={
        {
          "value": {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;

exports[`component: CustomCheckbox renders error 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        [
          {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          {
            "tintColor": "#FD565F",
          },
          {
            "tintColor": "#1EC490",
          },
        ]
      }
    />
    <Image
      animatedStyle={
        {
          "value": {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;

exports[`component: CustomCheckbox renders unchecked 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        [
          {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          undefined,
          undefined,
        ]
      }
    />
    <Image
      animatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "scale": 0.7,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "scale": 0.7,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;
